Add Britt's component to my proxy server

--- a/proxy_client/index.html
+++ b/proxy_client/index.html
@@ -4,13 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="/hrr36-fec-tyler-widget/client/dist/reset.css">
+  <link rel="stylesheet" href="/hrr36-fec1-britt-widget/src/style.css">
   <link rel="stylesheet" href="/hrr36-fec-tyler-widget/client/dist/style.css">
   <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
   <title>Metascore</title>
 </head>
 <body>
 
+  <div id="root"></div>
+  <script src="/hrr36-fec1-britt-widget/public/bundle.js"></script>
+
   <div id="metascore"></div>
   <script src="/hrr36-fec-tyler-widget/client/dist/bundle.js"></script>
+
 </body>
 </html>
