--- a/proxy_client/index.html
+++ b/proxy_client/index.html
@@ -4,30 +4,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="/hrr36-fec-tyler-widget/client/dist/reset.css">
   <link rel="stylesheet" href="/hrr36-fec1-britt-widget/src/style.css">
-  <link rel="stylesheet" href="/hrr36-fec-tyler-widget/client/dist/style.css">
+  <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
-  <!-- MERARYS COMPONENT STYLING CAUSING ISSUES -->
-  <link rel="stylesheet" href="./merary-banner-component/styles/style.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <title>BetaCritic</title>
 </head>
 <body>
   <!-- merary -->
-  <div id="root"></div>
-  <script src="/merary-banner-component/public/bundle.js"></script>
+  <iframe src="http://127.0.0.1:8080" width="1450"; height="622" frameBorder="0"></iframe>
   <!-- britt -->
   <div id="movie-details"></div>
   <script src="/hrr36-fec1-britt-widget/public/bundle.js"></script>
-  <!-- tyler -->
-  <div id="metascore"></div>
-  <script src="/hrr36-fec-tyler-widget/client/dist/bundle.js"></script>
-  <!-- bill -->
-  <div id="app"></div>
-  <script src="/bill-morelike-component/public/bundle.js"></script>
-  <script type="text/javascript" src="/bill-morelike-component/public/js/global_alt.min.1550077789.js"></script>
-
+  <div id="table">
+    <div class="table-item">
+      <iframe id="iframe1" src="http://127.0.0.1:4444" width="1000"; height="3000" frameBorder="0"></iframe>
+      <iframe id="iframe2" src="http://127.0.0.1:3333" width="400"; height="375" frameBorder="0"></iframe>
+    </div>
+  </div>
 </body>
 </html>
