--- a/proxy_client/index.html
+++ b/proxy_client/index.html
@@ -13,11 +13,12 @@
   <!-- merary -->
   <iframe src="http://127.0.0.1:8080" width="1450"; height="622" frameBorder="0"></iframe>
   <!-- britt -->
-  <div id="movie-details"></div>
-  <script src="/hrr36-fec1-britt-widget/public/bundle.js"></script>
+  <iframe id="iframe0" src="http://127.0.0.1:3002" width="1000"; height="710" frameBorder="0"></iframe>
   <div id="table">
     <div class="table-item">
+      <!-- tyler -->
       <iframe id="iframe1" src="http://127.0.0.1:4444" width="1000"; height="3000" frameBorder="0"></iframe>
+      <!-- bill -->
       <iframe id="iframe2" src="http://127.0.0.1:3333" width="400"; height="375" frameBorder="0"></iframe>
     </div>
   </div>
