--- a/proxy_client/index.html
+++ b/proxy_client/index.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="/hrr36-fec1-britt-widget/src/style.css">
-  <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
-  <title>BetaCritic</title>
+  <meta charset="utf-8">
+  <title>BetaCritic Proxy Server</title>
+  <link rel="stylesheet" type="text/css" href="https://s3-us-west-1.amazonaws.com/merary-fec/style.css">
+  <link rel="stylesheet" type="text/css" href="https://s3-us-west-2.amazonaws.com/bzfec/style.css">
+  <link rel="stylesheet" type="text/css" href="https://s3-us-west-1.amazonaws.com/mctrailers/public/css/global_alt.min.1550077789.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 <body>
-  <!-- merary -->
-  <iframe src="http://127.0.0.1:8080" width="1450"; height="622" frameBorder="0"></iframe>
-  <!-- britt -->
-  <iframe id="iframe0" src="http://127.0.0.1:3002" width="1000"; height="710" frameBorder="0"></iframe>
-  <div id="table">
-    <div class="table-item">
-      <!-- tyler -->
-      <iframe id="iframe1" src="http://127.0.0.1:4444" width="1000"; height="3000" frameBorder="0"></iframe>
-      <!-- bill -->
-      <iframe id="iframe2" src="http://127.0.0.1:3333" width="400"; height="375" frameBorder="0"></iframe>
-    </div>
-  </div>
+
+   <div id="root"></div>
+   <div id="movie-details"></div>
+   <div style="display: flex">
+    <div id="metascore"></div>
+    <div id="app"></div>
+   </div>
+
+
+   <script src="https://s3-us-west-1.amazonaws.com/merary-fec/bundle.js"></script>
+   <script src="https://s3-us-west-2.amazonaws.com/bzfec/bundle.js"></script>
+   <script src="https://s3-us-west-1.amazonaws.com/mctrailers/public/bundle.js"></script>
+   <script src="https://s3.us-east-2.amazonaws.com/fec-bundle-js/bundle.js"></script>
+   <script type="text/javascript" src="https://s3-us-west-1.amazonaws.com/mctrailers/public/js/global_alt.min.1550077789.js"></script>
 </body>
 </html>
