Update my server ec2 instance name and bundle.js

--- a/proxy_client/index.html
+++ b/proxy_client/index.html
@@ -18,11 +18,15 @@
     <div id="app"></div>
    </div>
 
-
-   <script src="https://s3-us-west-1.amazonaws.com/merary-fec/bundle.js"></script>
+   <!-- merary -->
+   <script src="https://s3.us-east-2.amazonaws.com/fec-bundle-js/merary_mini.js"></script>
+   <!-- britt -->
    <script src="https://s3-us-west-2.amazonaws.com/bzfec/bundle.js"></script>
+   <!-- billl -->
    <script src="https://s3-us-west-1.amazonaws.com/mctrailers/public/bundle.js"></script>
-   <script src="https://s3.us-east-2.amazonaws.com/fec-bundle-js/bundle.js"></script>
+   <!-- tyler -->
+   <script src="https://s3.us-east-2.amazonaws.com/fec-bundle-js/bundle-big.js"></script>
+   <!-- bill -->
    <script type="text/javascript" src="https://s3-us-west-1.amazonaws.com/mctrailers/public/js/global_alt.min.1550077789.js"></script>
 </body>
 </html>
